tests/ui/issues/issue-35139.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-35139.rs:9:6
   |
LL | impl<'a> MethodType for MTFn {
   |      ^^ unconstrained lifetime parameter
   |
help: Either remove the type parameter ''a' or make use of it, for example ` for S<'a>`.
   |
LL - impl<'a> MethodType for MTFn {
LL + impl<> MethodType for MTFn {
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
